--- a/getting-started/setup-installation/installation-methods.mdx
+++ b/getting-started/setup-installation/installation-methods.mdx
@@ -1,251 +1,207 @@
 ---
-title: "Installation Methods"
-description: "Guides users through supported installation approaches—including usage with CMake and Bazel—across different platforms. Covers obtaining the source, integrating into a project, and verifying successful library installation."
+title: "Installation (CMake & Bazel)"
+description: "Walks users through installing GoogleTest and GoogleMock using CMake and Bazel, the two primary build systems officially supported. Provides stepwise instructions for downloading, integrating, and building the libraries, ensuring users can get up and running regardless of their toolchain preference."
 ---
 
-# Installation Methods
+# Installation (CMake & Bazel)
 
-This guide walks you through the supported installation approaches for GoogleTest, focusing primarily on building and integrating GoogleTest and GoogleMock using CMake, across different platforms. It also covers obtaining the source code and verifying successful installation.
+This guide walks you through installing GoogleTest and GoogleMock using the two primary build systems officially supported: **CMake** and **Bazel**. Whether you're integrating testing into a new or existing project, you'll find step-by-step instructions to download, build, and link the libraries smoothly with your toolchain.
 
 ---
 
-## 1. Obtaining the GoogleTest Source
+## Prerequisites & System Requirements
 
-Start by cloning the GoogleTest repository to get the source code and build scripts:
+Before proceeding, ensure your environment meets the following prerequisites:
+
+- **C++17 Compatible Compiler**: GoogleTest requires a compiler that supports the C++17 standard.
+- **Build Tools**:
+  - For CMake: Ensure CMake (3.14 or newer recommended) is installed.
+  - For Bazel: Have Bazel installed with a compatible version for your platform.
+- **Network Access**: To clone the repository or download source archives.
+- **Permissions**: Sufficient permissions to build and, if needed, install the libraries.
+
+For detailed system requirements, see the [Prerequisites & System Requirements](https://github.com/google/googletest/tree/main/docs/getting-started/setup-installation/system-requirements) page.
+
+---
+
+## Installation via CMake
+
+GoogleTest includes GoogleMock by default when building via CMake. Follow these steps to set up:
+
+### 1. Download the Source
+
+Clone the repository or download a release archive:
 
 ```bash
-git clone https://github.com/google/googletest.git -b v1.17.0
-googletest/
+git clone https://github.com/google/googletest.git -b main
+cd googletest
 ```
 
-This repository includes both GoogleTest and GoogleMock sources.
+### 2. Create and Enter a Build Directory
 
----
+It's best practice to build out-of-source:
 
-## 2. Building GoogleTest with CMake
+```bash
+mkdir build
+cd build
+```
 
-GoogleTest provides a cross-platform CMake build script to generate native build projects.
+### 3. Generate Build Files
 
-### 2.1 Prerequisites
+Run CMake to generate native build files.
 
-- Ensure you have [CMake](https://cmake.org/download/) version 3.14 or later installed.
-- A C++17-compatible compiler is required.
+- To build both GoogleTest and GoogleMock:
 
-### 2.2 Building as a Standalone Project
-
-This workflow is for building GoogleTest independently.
-
-<Steps>
-  <Step title="Clone the repository and prepare your build directory">
-  ```bash
-  git clone https://github.com/google/googletest.git -b v1.17.0
-  cd googletest
-  mkdir build
-  cd build
-  ```
-  </Step>
-  <Step title="Generate build files with CMake">
-
-  By default, this will build both GoogleTest and GoogleMock:
   ```bash
   cmake ..
   ```
 
-  To build only GoogleTest (without GoogleMock), use:
+- To build only GoogleTest (exclude GoogleMock):
 
   ```bash
   cmake .. -DBUILD_GMOCK=OFF
   ```
-  </Step>
-  <Step title="Build the libraries">
 
-  On Unix-like systems:
+*Note*: On Windows, CMake will create Visual Studio project files by default.
+
+### 4. Build the Libraries
+
+- On Unix-like systems (Linux/macOS):
+
   ```bash
   make
   ```
 
-  On Windows with Visual Studio:
+- On Windows with Visual Studio:
 
-  - Open the `gtest.sln` solution file generated in the `build` directory.
-  - Build the projects using Visual Studio.
+  Open the generated solution file and build the `ALL_BUILD` project.
 
-  On Mac OS with Xcode:
+### 5. Optional: Install the Libraries
 
-  - Open the `.xcodeproj` file generated.
-  - Build using Xcode.
-
-  </Step>
-  <Step title="(Optional) Install GoogleTest">
-
-  If you have administrative rights and want to install GoogleTest system-wide:
-
-  ```bash
-  sudo make install
-  ```
-
-  This installs libraries and headers under `/usr/local/` by default.
-  </Step>
-</Steps>
-
-### 2.3 Incorporating GoogleTest Into an Existing CMake Project
-
-You have two main options:
-
-#### Option A: Use Installed Libraries
-
-If GoogleTest is installed on the system, import it in your `CMakeLists.txt`:
-
-```cmake
-find_package(GTest CONFIG REQUIRED)  # Searches for installed GoogleTest
-
-add_executable(my_tests test.cpp)
-target_link_libraries(my_tests PRIVATE GTest::gtest GTest::gmock)
-```
-
-#### Option B: Build as a Subdirectory
-
-Integrate GoogleTest source directly into your project build, ensuring consistent compiler and linker settings:
-
-1. Download the GoogleTest source to a known location or add as a git submodule.
-2. Add this to your `CMakeLists.txt`:
-
-```cmake
-add_subdirectory(path/to/googletest)
-
-add_executable(my_tests test.cpp)
-target_link_libraries(my_tests PRIVATE gtest gmock)
-```
-
-This approach helps prevent linking and runtime incompatibilities, especially on Windows.
-
-#### Option C: Download Automatically with FetchContent (Recommended for CMake ≥ 3.14)
-
-Add this snippet to your `CMakeLists.txt`:
-
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
-)
-# On Windows, use shared CRT to fix runtime mismatch errors
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-add_executable(my_tests test.cpp)
-target_link_libraries(my_tests PRIVATE gtest_main)
-add_test(NAME my_tests COMMAND my_tests)
-```
-
-This downloads and builds GoogleTest as part of your project during configuration.
-
----
-
-## 3. Important Build Configuration Notes
-
-### 3.1 C++ Standard
-
-GoogleTest requires a C++17 standard environment. Set in your top-level `CMakeLists.txt`:
-
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
-
-### 3.2 Visual Studio Runtime Library Setting
-
-By default, Visual Studio projects link the C runtime dynamically (`MD`), but GoogleTest links it statically (`MT`). This causes linker errors like:
-
-```
-gtest.lib(gtest-all.obj) : error LNK2038: mismatch detected for 'RuntimeLibrary'
-```
-
-**Resolution:** Enable `gtest_force_shared_crt` in CMake to force GoogleTest to use dynamic CRT:
-
-```cmake
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-```
-
-### 3.3 Multi-threaded Tests
-
-GoogleTest is thread-safe on platforms that support pthreads. If detection fails, you can force pthread usage:
+If you have sufficient permissions and want to install the built libraries and headers system-wide or to a custom directory:
 
 ```bash
--DGTEST_HAS_PTHREAD=1
+sudo make install
 ```
 
-Use the CMake build system to automatically handle pthread linkage.
-
----
-
-## 4. Building GoogleMock
-
-GoogleMock builds on GoogleTest and follows a similar process.
-
-- The `googlemock` directory contains its own `CMakeLists.txt`.
-- It automatically includes GoogleTest's source, either from `gtest` or `googletest`.
-
-Typical steps:
+or specify a prefix during configuration:
 
 ```bash
-cd googlemock
-mkdir build && cd build
-cmake ..
+cmake -DCMAKE_INSTALL_PREFIX=/your/install/path ..
 make
+make install
 ```
 
-> Note: The GoogleMock maintainers do not rely on CMake internally, so this support is community based.
+### 6. Verify Installation
 
-You can control building GoogleMock's own tests using the option `-Dgmock_build_tests=ON`.
+Check for the installation artifacts, typically:
+
+- Headers in `/usr/local/include/gtest` and `/usr/local/include/gmock`
+- Static/shared libraries like `libgtest.a`, `libgmock.a`, or equivalent.
+
+You can also compile a simple test program linked against these libraries to confirm everything works.
 
 ---
 
-## 5. Verifying Installation
+## Installation via Bazel
 
-After building or installing:
+Bazel offers integrated support for GoogleTest and GoogleMock. Use the following guide to build and run tests with Bazel.
 
-- Check that `libgtest.a` (or `.lib`, `.dll`) and `libgmock.a` are created.
-- Ensure header files `gtest/gtest.h` and `gmock/gmock.h` are accessible.
-- Run example tests or your own test targets linked against GoogleTest to confirm successful compilation and linking.
+### 1. Clone or Reference the Source
 
-For standalone builds:
+If you want to embed GoogleTest in your Bazel project:
+
+- Add GoogleTest as an external repository or submodule.
+
+- Alternatively, include it directly in your workspace.
+
+### 2. Writing BUILD Targets
+
+Use the provided Bazel BUILD files under the `googletest` directory. A typical test target depends on `@com_google_googletest//:gtest` and `@com_google_googletest//:gmock`.
+
+Example snippet in your `BUILD` file:
+
+```python
+cc_test(
+    name = "my_test",
+    srcs = ["my_test.cc"],
+    deps = [
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gmock",
+    ],
+)
+```
+
+### 3. Building and Running Tests
+
+Run your tests with Bazel:
 
 ```bash
-./example/example_test  # or your own test executable
+bazel test //path/to:my_test
 ```
 
-It should produce output indicating test progress and results.
+This command will build the test target and run it immediately.
+
+### 4. Managing External Dependencies
+
+For projects that don't include GoogleTest directly, configure your `WORKSPACE` file to pull GoogleTest from GitHub using `http_archive` or use Bazel's `rules_git`.
+
+Example `WORKSPACE` snippet:
+
+```python
+http_archive(
+    name = "com_google_googletest",
+    urls = ["https://github.com/google/googletest/archive/main.zip"],
+    strip_prefix = "googletest-main",
+)
+```
+
+Then run `bazel fetch //...` to download dependencies before building.
+
+### 5. Verify Bazel Setup
+
+Ensure your Bazel version is compatible (consult Bazel's documentation). Verify that test runs produce expected outputs.
 
 ---
 
-## 6. Troubleshooting
+## Integration Tips
 
-- **Build fails due to C++ standard version:** Verify your compiler supports C++17, and your CMake config sets `CMAKE_CXX_STANDARD` to 17.
-
-- **Link errors on Visual Studio regarding runtime libraries:** Set `gtest_force_shared_crt` option.
-
-- **Missing pthread-related symbols on Linux:** Ensure pthreads development libraries installed and properly linked.
-
-- **Test executables fail to run or link:** Confirm linker paths and include directories are correctly set.
-
-- **GoogleMock tests not building:** Set `-Dgmock_build_tests=ON` explicitly if you want them.
+- GoogleTest requires C++17 support. Confirm your compiler's version and build settings accommodate this.
+- When configuring CMake or Bazel, ensure your project's compiler flags propagate properly to the testing libraries.
+- For CMake projects integrating GoogleTest and GoogleMock, linking against `gtest` and `gmock` targets is usually sufficient.
+- Check for thread library linkage if building on UNIX systems; CMake usually handles this automatically.
 
 ---
 
-## 7. Additional Resources
+## Common Pitfalls & Troubleshooting
 
-- [GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [GoogleTest Primer](../getting-started/first-test-execution/writing-your-first-test)
-- [Mocking Basics Guide](../googletest-guides/advanced-mocking/mocking-basics)
-- [GoogleMock Cookbook](../docs/gmock_cook_book.md)
-
----
-
-By following this guide, you will successfully install and integrate GoogleTest and GoogleMock using CMake, setting up a solid foundation for writing and running your C++ tests.
-
+- **Missing Virtual Destructors**: Ensure mocked classes have virtual destructors to avoid runtime errors.
+- **Incorrect Mock Method Signatures**: Use the `MOCK_METHOD` macro exactly with the original method signatures, including `const` and `override` qualifiers.
+- **Compiler Errors with Templated or Complex Types**: Wrap return types or argument types with commas inside extra parentheses or use type aliases to avoid macro parsing errors.
+- **Build Errors on Windows**: Use `gtest_force_shared_crt` CMake option to fix runtime library mismatches.
 
 ---
 
-<Note>
-Remember to always build GoogleTest and your tests with the same compiler settings to avoid runtime and linking errors, especially on Windows systems. If using an existing project, prefer embedding GoogleTest via `add_subdirectory` for consistency.
-</Note>
+## Resources and Further Reading
+
+- [GoogleTest CMake Installation Guide](https://github.com/google/googletest/tree/main/googletest/README.md)
+- [GoogleMock Cookbook](https://github.com/google/googletest/tree/main/googlemock/docs/gmock_cook_book.md)
+- [Integration with Build Systems](https://github.com/google/googletest/tree/main/docs/overview/architecture-key-concepts/integration-with-build-and-tools.md)
+- [Getting Started with GoogleMock](https://github.com/google/googletest/tree/main/docs/guides/getting-started-workflows/mocking-basics.md)
+
+---
+
+For detailed build customization and advanced integration scenarios, please refer to the [Integration & Compatibility guide](https://github.com/google/googletest/tree/main/docs/overview/architecture-key-concepts/integration-with-build-and-tools.md).
+
+---
+
+### Quick Checklist
+
+- Confirm C++17 compiler and tools
+- Clone/download the source
+- Choose build system: CMake or Bazel
+- Follow stepwise build instructions
+- Link your test targets correctly
+- Verify build and test success
+
+With these clear steps, you will have GoogleTest and GoogleMock installed and ready within your chosen build system.
