--- a/getting-started/first-steps-validation/troubleshooting-setup.mdx
+++ b/getting-started/first-steps-validation/troubleshooting-setup.mdx
@@ -1,213 +1,223 @@
 ---
-title: "Troubleshooting Installation & Setup"
-description: "Addresses the most common setup and first-use errors—such as build failures, missing dependencies, or linker issues—offering quick solutions and tips. Helps users identify whether their environment is correctly configured so they can proceed confidently."
+title: "Troubleshooting Common Setup Issues"
+description: "Addresses the most frequently encountered installation and setup obstacles, including build errors, missing dependencies, include path issues, and test discovery problems. Provides direct, actionable fixes mapped to real-world user pain points."
 ---
 
-# Troubleshooting Installation & Setup
+# Troubleshooting Common Setup Issues
 
-Ensuring a smooth installation and setup process is critical for leveraging GoogleTest and GoogleMock effectively. This guide addresses the most common challenges users face during installation and initial configuration, offering practical solutions and tips to quickly resolve issues.
+This guide addresses the most frequently encountered installation and setup obstacles when working with GoogleTest. It helps you quickly diagnose and resolve problems related to build errors, missing dependencies, include path misconfigurations, and test discovery issues. By following these actionable solutions, you'll be equipped to overcome common pitfalls and get your tests running smoothly.
 
 ---
 
-## 1. Verify Your Environment
+## 1. Build Errors and Linker Failures
 
-### Check System Compatibility
-- Confirm your platform is supported: Linux, Windows, or macOS.
-- Ensure your compiler supports at least C++17 (GoogleTest requires this).
-- Validate you have enough disk space and appropriate permissions.
+Build errors during GoogleTest integration often stem from missing library files, incompatible compiler flags, or incorrect linking orders.
 
-### Confirm Dependences
-- Confirm CMake or your build system is installed and correctly configured.
-- For Windows, ensure Visual Studio or appropriate MSVC toolchain is available.
-
-<Check>
-Always start troubleshooting by verifying these environment prerequisites to avoid cascading errors.
-</Check>
-
-## 2. Build Failures
-
-### Common Causes
-- Missing or incorrect paths to GoogleTest or GoogleMock source headers.
-- Outdated or incompatible compilers.
-- Incorrect CMake invocation or flags.
-
-### How to Fix
-
-#### Using CMake Standalone
-1. Ensure you clone the repository correctly:
-
-```bash
-$ git clone https://github.com/google/googletest.git -b v1.17.0
-d$ cd googletest
-$ mkdir build && cd build
-$ cmake ..
-```
-
-If you intend to build GoogleTest only (without GoogleMock):
-
-```bash
-$ cmake .. -DBUILD_GMOCK=OFF
-```
-
-2. Run the build:
-
-```bash
-$ make
-```
-
-3. For Windows users, open the generated `gtest.sln` in Visual Studio and build.
-
-<Note>
-Be sure to check the output for any errors or warnings during CMake generation. Missing dependencies or misconfigured environment variables often cause these.
-</Note>
-
-### CMake Troubleshooting Tips
-- Clear your build directory if you suspect stale configurations.
-- Use verbose output for CMake to identify configuration issues:
-
-```bash
-$ cmake .. -DCMAKE_VERBOSE_MAKEFILE=ON
-```
-
-- On Windows, consider setting `-Dgtest_force_shared_crt=ON` if encountering runtime library mismatches.
-
-## 3. Linker Errors
-
-### Typical Problems
-- Library paths not linked correctly.
-- Using incompatible runtime libraries (e.g., static vs dynamic CRT on Windows).
-- Missing `gtest_main` or `gmock_main` in your linking command.
+### Common Symptoms
+- Undefined references to GoogleTest symbols during linking.
+- Compiler errors indicating missing headers or symbols.
+- Runtime errors due to unresolved externals.
 
 ### Solutions
-- Link against `gtest_main` or `gmock_main` to get the default `main()`:
 
-```cmake
-target_link_libraries(your_test_target gtest_main)
+#### a. Verify GoogleTest Libraries Are Built and Linked
+Make sure you have successfully built the GoogleTest libraries (`gtest` and optionally `gmock`):
+
+- If using CMake standalone or as a subproject, ensure `make` or your build runs without errors.
+- Link the test executable against the built libraries, for example:
+
+```bash
+# Example for g++:
+g++ your_test.cc -lgtest -lpthread -o your_test
 ```
 
-- For custom `main()`, link against `gtest` and/or `gmock` only.
-- Ensure all required object files and libraries are included.
+- With CMake, use:
 
-<Tip>
-If you build your tests manually, always specify the correct include and library directories for your toolchain.
-</Tip>
+```cmake
+find_package(GTest REQUIRED)
+target_link_libraries(your_test PRIVATE GTest::gtest GTest::gtest_main pthread)
+```
 
-## 4. Runtime Issues
+#### b. Match Compiler Standards and Flags
+GoogleTest requires a compiler supporting C++17.
 
-### Tests Not Running or Being Detected
-- Confirm that your test binary is linked with GoogleTest properly.
-- Ensure that tests are registered (for example, through `TEST()` macros).
-- Verify that you call `testing::InitGoogleTest()` before `RUN_ALL_TESTS()` in `main()`.
+- Set your compiler to use at least `-std=c++17`.
+- Ensure your project and GoogleTest share compatible compiler flags to avoid ABI incompatibilities.
 
-### GoogleMock Initialization
-Use `testing::InitGoogleMock()` if you utilize mocks, which also initializes GoogleTest:
+#### c. Static vs. Shared Library Runtime Consistency
+On Windows, linking errors like `mismatch detected for 'RuntimeLibrary'` occur when GoogleTest and your code use differing runtime libraries (static vs dynamic CRT).
+
+- Use the CMake option `gtest_force_shared_crt` to align GoogleTest runtime linkage:
+
+```bash
+cmake .. -Dgtest_force_shared_crt=ON
+```
+
+- Match this setting with your project’s runtime library configuration.
+
+### Troubleshooting Steps
+- Run your build with verbose output (e.g., `make VERBOSE=1`) to check link commands.
+- Verify library paths and include paths point to correct GoogleTest build outputs.
+- Confirm libraries are not missing or stale.
+
+---
+
+## 2. Missing Dependencies and Include Path Issues
+
+Failures to compile due to missing headers or dependencies are common when project include paths or dependency resolution are misconfigured.
+
+### Common Symptoms
+- Errors stating files like `gtest/gtest.h` cannot be found.
+- Compiler unable to locate headers for GoogleMock (if used).
+
+### Solutions
+
+#### a. Include Directory Setup
+- Include GoogleTest source or installation path in your compiler’s include search paths.
+
+Example:
+```bash
+g++ -isystem /path/to/googletest/include ...
+```
+
+- When using CMake, link with `GTest::gtest` which sets appropriate includes automatically.
+
+#### b. Check for Submodule or Source Availability
+- If using GoogleTest as a git submodule or downloaded source, confirm the directory exists and is reachable.
+- For embedded builds (e.g., FetchContent in CMake), verify GoogleTest sources are being downloaded and built properly.
+
+#### c. Header Consistency
+- GoogleTest headers usually reside under `googletest/include/gtest/`. Ensure this hierarchy remains unchanged unless overridden.
+
+### Tips
+- Use `-isystem` instead of `-I` for system headers to suppress warnings from GoogleTest code.
+- Check for multiple versions of GoogleTest headers that may cause conflicts.
+
+---
+
+## 3. Test Discovery Problems
+
+GoogleTest automatically discovers `TEST` and `TEST_F` macros at runtime, but misconfigurations can cause tests not to appear or run.
+
+### Common Symptoms
+- Running your test executable shows no tests discovered.
+- The `--gtest_list_tests` flag outputs zero or no tests.
+
+### Solutions
+
+#### a. Ensure Initialization with `InitGoogleTest`
+Always call `testing::InitGoogleTest(&argc, argv)` before `RUN_ALL_TESTS()` in your `main()`:
 
 ```cpp
 int main(int argc, char** argv) {
-  testing::InitGoogleMock(&argc, argv);
+  testing::InitGoogleTest(&argc, argv);
   return RUN_ALL_TESTS();
 }
 ```
 
-### Common Pitfalls
-- Calling `RUN_ALL_TESTS()` multiple times leads to undefined behavior.
-- Ignoring the return value of `RUN_ALL_TESTS()` results in compile errors.
+#### b. Confirm Test Macros Usage
+- Use the GoogleTest macros `TEST()`, `TEST_F()`, or `TEST_P()` to define tests; they auto-register tests.
+- Avoid manual registration unless needed.
 
-## 5. Permission and Access Issues
+#### c. Link Test Objects into Final Executable
+- Make sure your test implementation files (containing `TEST()` macros) are compiled and linked into your final test program.
 
-- Building or installing with insufficient privileges can cause failures.
-- On Linux/macOS, use `sudo make install` carefully and only when necessary.
-- For CI environments, confirm user permissions and environment variables like PATH.
+#### d. Check for Disabled Tests
+- Tests prefixed with `DISABLED_` won't run unless the `--gtest_also_run_disabled_tests` flag is set.
 
-## 6. Tips for Smooth Setup
+#### e. Environment Variables and Flags
+- Use `--gtest_list_tests` to confirm test discovery.
+- Verify no filter (`--gtest_filter`) excludes your tests unintentionally.
 
-- Use the pre-packaged `gtest_main` or `gmock_main` libraries to simplify test writing.
-- When integrating into existing projects, prefer building GoogleTest as a subproject via `add_subdirectory()` to avoid version mismatches.
-- Regularly update your local clone to maintain compatibility and get fixes.
-
-## 7. Additional Troubleshooting Resources
-
-- Run your tests with the `--gmock_verbose=info` flag to get detailed logs of mock calls and expectation matches.
-- Check GoogleTest’s and GoogleMock’s GitHub issues and discussions for known issues related to your platform or compiler.
-- Validate your build environment by running the quick validation tests included in the repository.
-
-<AccordionGroup title="Common Errors and Their Solutions">
-<Accordion title="Unrecognized Compiler Errors">
-- Ensure you are running a supported compiler with C++17 support.
-- Update your compiler or adjust your build flags to enforce C++17 compliance.
-</Accordion>
-<Accordion title="Linker Error: Undefined References to GoogleTest Symbols">
-- Make sure to link the correct libraries.
-- Check the order of libraries in your linker command: GoogleTest libraries should come after your test objects.
-</Accordion>
-<Accordion title="Tests Not Discovered or Not Running">
-- Confirm test registration macros are used correctly.
-- Check that your `main()` function properly initializes GoogleTest.
-</Accordion>
-<Accordion title="Build Time Out of Memory or Long Compile Times">
-- Move mock class constructor and destructor definitions out of headers into `.cc` files.
-- Minimize the number of mocked methods if possible.
-</Accordion>
-</AccordionGroup>
-
-## 8. Next Steps
-
-Once installation and setup issues are resolved, proceed with:
-
-- [Writing and Running Your First Test](../first-steps-validation/create-first-test.md) to validate your setup.
-- [Configuration and Setup](../setup-installation/configuration-setup.md) to integrate GoogleTest into your build system.
-- [Using Assertions Effectively](../../guides/core-workflows/using-assertions-effectively.md) to build robust tests.
-
-<Info>
-Remember to frequently consult the latest documentation and community resources to stay updated on best practices and newly discovered issues.
-</Info>
+### Debugging Steps
+- Add a simple, bare `TEST()` macro in the main test file to verify basic discovery.
+- Compile with verbose flags to observe linking and compilation details.
 
 ---
 
-**Example Basic Build Script Using CMake:**
+## 4. Common Pitfalls and How to Avoid Them
 
-```cmake
-cmake_minimum_required(VERSION 3.14)
-project(MyTestProject)
+- **Link Order Conflicts:** On some platforms, the order of linked libraries matters. Ensure `-lgtest` and `-lpthread` (Linux) are in the correct order.
 
-add_subdirectory(path/to/googletest)
+- **Multiple GoogleTest Versions:** Having multiple copies of GoogleTest installed or included can lead to symbol clashes. Clean up older versions or ensure consistent use.
 
-enable_testing()
+- **Lacking Threading Support:** GoogleTest requires pthread support for multi-threaded tests. Make sure your platform and build enable pthread (`-pthread` flag on GCC/Clang).
 
-add_executable(MyTests test.cpp)
+- **Constructor/Fatal Assertion Errors:** Do not place fatal assertions inside constructors or destructors; use `SetUp()` and `TearDown()` instead.
 
-# Link against GoogleTest and GoogleMock
-target_link_libraries(MyTests gtest_main gmock_main)
+<Tip>
+Whenever things go wrong, start from the simplest working example: a minimal `TEST()` case with basic assertions, built and run according to GoogleTest instructions.
+</Tip>
 
-add_test(NAME MyTests COMMAND MyTests)
+---
+
+## 5. Additional Diagnostic and Debugging Tips
+
+- **Enable Verbose Output:** Run your test executable with `--gtest_verbose=info` or `--gtest_print_time=1`.
+
+- **Verify Output:** Use `--gtest_list_tests` to confirm which tests are registered.
+
+- **Review Compiler and Linker Logs:** Ensure no warnings or errors are hidden.
+
+- **Validate Library Paths:** Use tools like `ldd` (Linux) or Dependency Walker (Windows) to check shared library linkage.
+
+- **Check Environment Variables:** Flags like `GTEST_COLOR`, `GTEST_FILTER`, or `GTEST_FAIL_FAST` can affect test runs.
+
+- **Clean Builds:** Always clean your build directory to avoid stale artifacts.
+
+---
+
+## 6. When to Get Help
+
+If you continue to have issues after following these steps, consult the following resources:
+
+- [Official GoogleTest GitHub Repository](https://github.com/google/googletest): For bug reports and issues.
+- GoogleTest User's Guide and FAQ for common questions.
+- Community forums and developer mailing lists.
+
+Ensure you provide detailed build logs, compiler versions, platform details, and steps you have tried.
+
+---
+
+## Useful Command Examples
+
+### Listing Tests
+```bash
+./your_test_binary --gtest_list_tests
+```
+
+### Running All Tests
+```bash
+./your_test_binary
+```
+
+### Running Specific Tests
+```bash
+./your_test_binary --gtest_filter=TestSuiteName.TestName
+```
+
+### Running Disabled Tests
+```bash
+./your_test_binary --gtest_also_run_disabled_tests
+```
+
+### Building with CMake
+```bash
+mkdir build
+cd build
+cmake ..
+make
+./your_test_binary
 ```
 
 ---
 
-**Example Main Function for Custom Entry Point:**
+This troubleshooting page complements other setup and usage documentation:
 
-```cpp
-#include <gtest/gtest.h>
-#include <gmock/gmock.h>
+- [Installation (CMake & Bazel)](/getting-started/setup-installation/installation-methods)
+- [Prerequisites & System Requirements](/getting-started/setup-installation/system-requirements)
+- [Writing & Running Your First Test](/getting-started/first-steps-validation/writing-your-first-test)
 
-int main(int argc, char **argv) {
-  testing::InitGoogleMock(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
+Use these to ensure your setup aligns with GoogleTest best practices and environment requirements.
 
 ---
-
-## Troubleshooting Checklist
-
-| Issue                               | Possible Fix                                  |
-|------------------------------------|-----------------------------------------------|
-| Compilation fails                  | Check compiler version, include paths, C++17 support. |
-| Linker errors                     | Link correct libraries, order correct.       |
-| Tests not running or discovered   | Use correct macros, initialize GoogleTest properly. |
-| Uninteresting call warnings       | Use `NiceMock` or add catch-all expectations. |
-| Build slow or out of memory       | Separate implementation, reduce mocks.        |
-
----
-
-For more information, see the [Official GoogleTest Installation Guide](https://github.com/google/googletest/blob/main/googletest/README.md) and [GoogleMock README](https://github.com/google/googletest/blob/main/googlemock/README.md).
